static/css/base.css
body {
    background: url('https://res.cloudinary.com/dqjrogx2f/image/upload/v1707222991/static/images/IMG_8078123123.0c33d1c09dd7.webp') no-repeat center center fixed;
    background-size: 50%;
    height: calc(100vh - 164px);
    color: #555;
    font-family: 'Lato';
    height: 100%;
}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.logo-font {
    text-transform: uppercase;
}

.main-logo-link {
    width: fit-content;
}

.shop-now-button {
    background: white;
    color: white;
    min-width: 260px;
    border-radius: 15px;
}

.btn-black {
    background: black;
    color: white;
}

.btn-outline-black {
    background: white;
    color: black !important; /* use important to override link colors for <a> elements */
    border: 1px solid black;
}

.btn-outline-black:hover,
.btn-outline-black:active,
.btn-outline-black:focus {
    background: black;
    color: white !important;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: #d05323;
    color: white;
    border: 2px solid black;
    
}

.text-black {
    color: #000 !important;
}

.icon-color {
    color: #d05323;
}
.center-home-link {
    margin-left: auto;
    margin-right: auto;
}

.border-black {
    border: 1px solid black !important;
}
.set-border {
    border: 0.2rem double rgba(60, 60, 60, 0.3) !important;
}

.wth-orange {
    color: rgb(255, 165, 0);
}

#wth-text {
    background: url('https://res.cloudinary.com/dqjrogx2f/image/upload/v1707234833/static/images/IMG_8078_TEXT_pqlrzd.jpg') no-repeat center;
    background-size: 55%;
    max-height: 164px;
    min-height:  60px;
    border: 0.2rem double rgba(60, 60, 60, 0.3);
    max-width: 20rem;
    margin: 1rem 9rem;
    border-radius: 10px;
    
}

#edit-shopNowBtn {
    margin-top: 35rem;
}

.overlay1 {
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    background: white;
    z-index: -1;
}

.card > a > img {
    width: 200px;
    height: 220px;
}

#set-card-width > .card {
    max-width: 200px;
}
#set-card-width {
    max-width: 202px;
    padding: 0;
}

.new-shadow-orange {
    box-shadow: 2px 2px 7px 3px rgba(208,83,35, 0.5);
    padding: 0;
}

.new-in-overlay {
    background: white;
    bottom: 0;
    max-height: 60vh;
}

.btt-button {
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;
}

.btt-link,
.update-link,
.remove-item {
    cursor: pointer;
}

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

.display-new-items {
    background-color: white;
    margin-bottom: 0rem;
    padding: 1rem;
    border: 0.1rem solid black;
    display: flex;
    justify-content: space-evenly;

}

.new-in-header {
    text-align: center;
    margin-top: 0rem;
    background-color: white;
    width: 20%;
    margin-left: auto;
    margin-right: auto;
    border-bottom: 0.2rem double #000;
    border-top: 0.2rem double #000;
    padding: 0.2rem;
    margin-bottom: 1rem;
    border-radius: 15px;
}

.card-style {
    border: 0.3rem double black;
    border-radius: 6px;

}

set-border {
    border: 0.2rem solid black;

}

.pd-image {
    padding: 1rem;
    background-color: #d05323;
    border: 0.2rem solid black;
}

.fix-btn {
    background-color: white;
    padding: 3rem;
    max-height: 10vh;
}

.dropdown-menu {
    border: 0.5rem double rgba(60, 60, 60, 1);
}

.pagination {
    display: flex;
    margin-top: 15px;
    align-items: center;
    justify-content: center;
    margin-bottom: 1rem;

}

.list-inline-item > a {
    color: #d05323;
}

.shadow-orange{
    box-shadow: 2px 2px 7px 3px rgba(208,83,35, 0.5);
}

.center-container {
    padding: 1rem;

}

.pagination-arrows {
    color: #d05323;
}

.pagination-arrows:hover {
    color: #555;
}

.move-shop-now {
    margin-left: auto;
    margin-right: auto;
}

.padding-1 {
    padding: 1rem;
}

.outfit-image {
    width: 130px;
    height: 160px;

}

.display-outfit {
    margin: 2rem 1rem;
    padding: 2rem 2rem 1rem 2rem;
}

.error-pages {
    padding: 2rem;
}

.news-letter {
    
    font-size: 00.75rem;

}

/* ------------------- Footer */

footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    background-color: #d05323;
    color: white;
    text-align: center;
    margin-top: 100%;
    height: 5vh;
    margin-top: 6rem;
    border-top: 0.2rem solid black;
    border-bottom: none;
    left: 0;
}

footer > span >a {
    margin-top: 0.75rem;
    color: white;
}

footer > span {
    margin-right: 3rem;
}

.footer-fix {
    margin-bottom: 6rem;
}

.related-brands {
    margin-bottom: 3rem;
    min-height: 10rem;
    display: flex;
    justify-content: space-between;
    padding: 0 7rem;
}

.display-brands {
    background-color: white;
    margin-bottom: 7rem;
    padding-top: 2rem;
}

.related-brands-header {
    display: flex;
    justify-content: center;
    margin-bottom: 2rem;
}

.body > * {
    max-width: 100vw;
}

.brand-logo {
    max-width: 60px;
    max-height: 120px;
}


/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }

  .hide {
    display: none;
  }

}
  

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}



/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .error-pages {
        max-width: 80vw;
        margin-left: auto;
        margin-right: auto;
        margin-top: 6rem;
    }

    .header-container {
        padding-top: 164px;
    }

    header {
        border-bottom: 0.3rem double rgba(60, 60, 60, 0.5);
    }

    .shadow-orange{
        box-shadow: 2px 2px 7px 3px rgba(208,83,35, 0.5);
    }

    .login > input {
        box-shadow: 2px 2px 7px 3px rgba(208,83,35, 0.5) !important;
    }

    .center-container {
        margin-top: 3rem;
    }
}
@media (max-width: 991px) {
    .header-container {
        padding-top: 116px;
    }

    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    body {
        height: calc(100vh - 116px);
        background-size: 100%;
    }

    #edit-shopNowBtn {
        margin-top: 20rem;
        background-color: #d05323;
        border: 2px solid black;
    }

    .heading-size {
        font-size: 1.25rem;
    }

    .display-4.logo-font.text-black {
        font-size: 2rem;
    }

    .nav-link {
        padding: 0.15rem;
    }

    .nav-link i.fa-lg {
        font-size: 1rem;
    }

    .navbar-toggler {
        padding: .6rem .6rem;
        font-size: 1rem;
    }

    #delivery-banner h4 {
        font-size: .9rem;
    }

    .btn.btn-outline-black.rounded-0,
    .btn.btn-black.rounded-0 {
        padding: .375rem .375rem;
    }

    .btn.btn-outline-black.rounded-0.btn-lg,
    .btn.btn-black.rounded-0.btn-lg {
        padding: .375rem .375rem;
        font-size: .75rem;
    }

    .increment-qty, .decrement-qty {
        padding: .25rem .5rem !important;
    }

    .new-in-header {
        width: 40%;
    }

    .center-container {
        margin-left: 4rem;
        width: 50vw;
    }

    #set-width-nav {
        min-width: 80vw;
    }

    #set-width-nav > li{
        margin-right: 14%;
    }

    .error-pages {
        max-width: 80vw;
        margin-left: auto;
        margin-right: auto;
        margin-top: 6rem;
    }

    .footer-fix {
        padding-bottom: 4rem;
    }
}

@media (max-width: 663px) {
    #set-width-nav > li{
        margin-right: 6%;
    }


}

@media (max-width: 480px) {
    .list-inline-item > a {
        font-size: 0.60rem;
    }

    .display-new-items {
        margin-top: 2rem;
    }

    .center-container {
        margin-left: 4rem;
        width: 64vw;

    }

    #set-width-nav > li{
        margin-right: 1rem;
    }

    .outfit-image {
        width: 60px;
        height: 110px;
    }
    
    .aloha {
        margin-right: 1rem;
    }
    
    .display-outfit {
        padding: 1rem;
        
    }

    .hide-sm {
        display: none;
    }

    .error-pages {
        max-width: 70vw;
        margin-left: auto;
        margin-right: auto;
        margin-top: 4rem;
    }
}

